--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-scripts": "2.1.5"
   },
   "scripts": {
-    "start": "PORT=8080 react-scripts start",
+    "start": "react-scripts start PORT=8080",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
