--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "western-yp",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "8.11.1",
+    "npm": "5.6.0"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
